# EmbedPack

./: App.cpp  App.h  CMakeLists.txt  CoreServices.cpp  CoreServices.h  LICENSE  README.md  build_release.bat  main.cpp
